force-app/main/default/objects/TW1_Facility__c/fields/TW1_Facility__c.field-meta.xml
<CustomField>
    <fullName>TW1_Facility__c</fullName>
    <label>Facility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>