force-app/main/default/objects/TW1_Facility__c/fields/TW1_Focal_Point_Supply_Chain__c.field-meta.xml
<CustomField>
    <fullName>TW1_Focal_Point_Supply_Chain__c</fullName>
    <label>Focal Point (Supply Chain)</label>
    <type>Email</type>
</CustomField>