force-app/main/default/objects/TW1_Facility__c/fields/TW1_Inventory_Management_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>TW1_Inventory_Management_Coordinator__c</fullName>
    <label>Inventory Management Coordinator</label>
    <type>Email</type>
</CustomField>