force-app/main/default/objects/TW1_Facility__c/fields/TW1_Material_Logistic_Assistant__c.field-meta.xml
<CustomField>
    <fullName>TW1_Material_Logistic_Assistant__c</fullName>
    <label>Material Logistic Assistant</label>
    <type>Email</type>
</CustomField>