force-app/main/default/objects/TW1_Facility__c/fields/TW1_Material_Logistic_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>TW1_Material_Logistic_Supervisor__c</fullName>
    <label>Material Logistic Supervisor</label>
    <type>Email</type>
</CustomField>