force-app/main/default/objects/TW1_Facility__c/fields/TW1_OE_Engineer__c.field-meta.xml
<CustomField>
    <fullName>TW1_OE_Engineer__c</fullName>
    <label>OE Engineer</label>
    <type>Email</type>
</CustomField>