force-app/main/default/objects/TW1_Facility__c/fields/TW1_Operation_Manager__c.field-meta.xml
<CustomField>
    <fullName>TW1_Operation_Manager__c</fullName>
    <label>Operation Manager</label>
    <type>Email</type>
</CustomField>