force-app/main/default/objects/TW1_Facility__c/fields/TW1_Procurement_Analyst_Specialist__c.field-meta.xml
<CustomField>
    <fullName>TW1_Procurement_Analyst_Specialist__c</fullName>
    <label>Procurement Analyst Specialist</label>
    <type>Email</type>
</CustomField>