force-app/main/default/objects/TW1_Facility__c/fields/TW1_Type__c.field-meta.xml
<CustomField>
    <fullName>TW1_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Vessel</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>