force-app/main/default/objects/TW1_Facility__c/fields/TW5_Logistic_1__c.field-meta.xml
<CustomField>
    <fullName>TW5_Logistic_1__c</fullName>
    <label>Logistic 1</label>
    <type>Email</type>
</CustomField>