force-app/main/default/objects/TW1_Facility__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>TW1_Type__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>